# shork

./: Cargo.toml
src/: audio.rs  config.rs  jellyfin.rs  main.rs
