[package]
name = "shork"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rodio = { version = "*", features = ["symphonia-all"] }
